# hackathon_2

./: Cargo.toml  justfile
src/: client.rs  player.rs  server.rs  track_gen.rs  track_mesh.rs  world.rs
