[package]
name = "hackathon_game"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
approx = "0.5.1"
async-compat = "0.2.4"
bevy = "0.15.3"
bevy_panorbit_camera = "0.25.0"
bevy_rapier3d = "0.29.0"
clap = { version = "4.5.32", features = ["derive"] }
lightyear = "0.19.0"
noise = "0.9.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
